--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,20 @@
-<h1>Restaurants#show</h1>
+<h1>Restaurant: <%= @restaurant.name %></h1>
 <p>Find me in app/views/restaurants/show.html.erb</p>
+<%= link_to('Back to restaurants index', restaurants_path) %>
+<hr>
+<div>
+  <p> Description: <%= @restaurant.name %></p>
+  <%= image_tag(picture_url) %>
+  <%= link_to('Website', "#") %>
+  <p> Description: <%= @restaurant.summary %></p>
+  <p> Description: <%= @restaurant.category_id %></p>
+  <p> Description: <%= @restaurant.neighbourhood %></p>
+  <p> Description: <%= @restaurant.price_range %></p>
+  <p> Description: <%= @restaurant.opening_hours %></p>
+  <p> Description: <%= @restaurant.closing_hours %></p>
+  <p> Description: <%= @restaurant.menu %></p>
+  <p> Description: <%= @restaurant.address %></p>
+  <p> Description: <%= @restaurant.address %></p>
+  <p> Description: <%= @restaurant.address %></p>
+  <p> Description: <%= @restaurant.address %></p>
+</div>
