--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,1 +1,6 @@
 <h1>Show Reservation</h1>
+<p><%= @reservation.date_time %></p>
+<p><%= @reservation.party_size %></p>
+<p><%= @reservation.user_id %></p>
+<p><%= @reservation.restaurant_id %></p>
+<hr>
