added delete link to show page

--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -3,4 +3,6 @@
 <p><%= @reservation.party_size %></p>
 <p><%= @reservation.user_id %></p>
 <p><%= @reservation.restaurant_id %></p>
+
+  <%= link_to("Delete", reservation_path(@reservation), method: :delete, data: {confirm: "Are you sure you want to delete this reservation?"})  %>
 <hr>
