--- a/app/views/reservations/_reservation_form.html.erb
+++ b/app/views/reservations/_reservation_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for reservation, url: {action: "create"} do |f| %>
+<%= form_for reservation do |f| %>
   <div class="reservation_form">
     <%= f.label :date_time %>
     <%= f.datetime_local_field :date_time %>
@@ -19,7 +19,7 @@
     <%= f.number_field :restaurant_id %>
   </div>
 
-  <div class="reservation_form">
-    <%= f.submit "Create" %>
+  <div class="action">
+    <%= f.submit %>
   </div>
 <% end %>
