Sign Up, Sign In pages marked up and linking properly

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,7 @@
-<h1>NEW USER</h1>
-
-<br />
+<p>- new user -</p>
 
 <%= form_for(@user) do |f| %>
+
   <% f.label :name %>
   <%= f.text_field :name, placeholder: "Name" %>
 
