added form for with nested resource for reservations pertaining to restaurants, removed manual entry of user id and restaurant id, the new reservation will take the information from url and sessions id

--- a/app/views/reservations/_reservation_form.html.erb
+++ b/app/views/reservations/_reservation_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for reservation do |f| %>
+<%= form_for [restaurant, reservation] do |f| %>
   <div class="reservation_form">
     <%= f.label :date_time %>
     <%= f.datetime_local_field :date_time %>
@@ -9,7 +9,7 @@
     <%= f.number_field :party_size %>
   </div>
 
-  <div class="reservation_form">
+  <!-- <div class="reservation_form">
     <%= f.label :user_id %>
     <%= f.number_field :user_id %>
   </div>
@@ -17,7 +17,7 @@
   <div class="reservation_form">
     <%= f.label :resteraunt_id %>
     <%= f.number_field :restaurant_id %>
-  </div>
+  </div> -->
 
   <div class="action">
     <%= f.submit %>
