--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,3 +1,3 @@
 <h1>New Reservation</h1>
 
-<%= render 'reservation_form', reservation: @reservation %>
+<%= render 'reservation_form', reservation: @reservation, restaurant: @restaurant %>
