--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
-<h1><%= link_to "Welcome!", root_path %></h1>
+<header>
+<% if current_user %>
+  <%= current_user.email %>
+  <%= link_to "Log out", session_path("current"), :method => :delete %>
+<% else%>
+  <%= link_to "Sign Up", new_user_url %>
+  <%= link_to "Sign In", new_session_url %>
+<% end %>
+</header>
 
 <%= yield %>
 
