--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,1 @@
-<header>
-<% if current_user %>
-  <%= current_user.email %>
-  <%= link_to "Log out", session_path("current"), :method => :delete %>
-<% else%>
-  <%= link_to "Sign Up", new_user_url %>
-  <%= link_to "Sign In", new_session_url %>
-<% end %>
-</header>
+<h1>HOMEPAGE</h1>
