--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -1,8 +1,8 @@
 <h1>Show Reservation</h1>
 <p><%= @reservation.date_time %></p>
 <p><%= @reservation.party_size %></p>
-<p><%= @reservation.user_id %></p>
-<p><%= @reservation.restaurant_id %></p>
+<p><%= @reservation.user.name %></p>
+<p><%= @reservation.restaurant.name %></p>
 
   <%= link_to("Delete", restaurant_reservation_path(@restaurant, @reservation), method: :delete, data: {confirm: "Are you sure you want to delete this reservation?"})  %>
 <hr>
