--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -5,4 +5,5 @@
 <p><%= @reservation.restaurant.name %></p>
 
   <%= link_to("Delete", restaurant_reservation_path(@restaurant, @reservation), method: :delete, data: {confirm: "Are you sure you want to delete this reservation?"})  %>
+  <%= link_to("Edit", edit_restaurant_reservation_path(@restaurant, @reservation)) %>
 <hr>
