--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
 <header>
 <% if current_user %>
-  <%= current_user.email %>
+  Signed in as <%= link_to current_user.email, user_path(current_user) %>
   <%= link_to "Log out", session_path("current"), :method => :delete %>
 <% else%>
   <%= link_to "Sign Up", new_user_url %>
@@ -18,7 +18,9 @@
 <% end %>
 </header>
 
-<%= yield %>
+<main><%= yield %></main>
+
+<footer></footer>
 
 </body>
 </html>
