--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,10 @@
   <%= link_to "Sign Up", new_user_url %>
   <%= link_to "Sign In", new_session_url %>
 <% end %>
+
+<% if flash[:notice] %>
+  <p class="notice"><%= flash[:notice] %></p>
+<% end %>
 </header>
 
 <main><%= yield %></main>
