added check for date in the past and capacity, capacity does not take into account rolling times

--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,3 +1,5 @@
 <h1>New Reservation</h1>
-
+<% flash.each do |key, value| %>
+  <%= content_tag :div, value, class: "flash #{key}" %>
+<% end %>
 <%= render 'reservation_form', reservation: @reservation, restaurant: @restaurant %>
