--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,9 @@
-<h1>Restaurants#new</h1>
-<p>Find me in app/views/restaurants/new.html.erb</p>
+<h1>Add a new restaurant...</h1>
+<%=  link_to("Back to Index", restaurants_path) %>
+<hr>
+<!-- <p>Find me in app/views/products_controller/new.html.erb</p> -->
+
+
+<%= render 'restaurants/form', restaurant: @restaurant %>
+
+<%= @restaurant.errors.full_messages.first if @restaurant.errors.any? %>
