--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 
 <header>
+<%= link_to "Home", root_path %>
 <% if current_user %>
   Signed in as <%= link_to current_user.email, user_path(current_user) %>
   <%= link_to "Log out", session_path("current"), :method => :delete %>
