--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,10 +7,6 @@
 
 <h3>Your Reservations:</h3>
 
-<ul>
-  <% @reservations.each do |reso| %>
-    <li><%= reso.restaurant.name %> on <%= reso.date_time %> for <%= reso.party_size %> | <%= link_to "More Info", restaurant_reservation_path(reso)%></li>
-  <% end %>
-</ul>
+<%= render "shared/user_reservations", reservations: @reservations %>
 
 <%= link_to("Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to your account? All of your reservations will also be deleted!"}) %>
