--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -36,3 +36,8 @@
   <% end %>
   <% end %>
 </section>
+
+<% if current_user %>
+<h2>Your Reservations:</h2>
+  <%= render "shared/user_reservations", reservations: @reservations %>
+<% end %>
