--- a/app/views/shared/_user_reservations.html.erb
+++ b/app/views/shared/_user_reservations.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% reservations.each do |reso| %>
-    <li><%= reso.restaurant.name %> on <%= reso.date_time %> for <%= reso.party_size %> | <%= link_to "More Info", restaurant_reservation_path(reso)%></li>
+    <li><%= reso.restaurant.name %> on <%= reso.date_time %> for <%= reso.party_size %> | <%= link_to "More Info", restaurant_reservation_path(reso.restaurant_id, reso)%></li>
   <% end %>
 </ul>
