new/update working

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -20,13 +20,13 @@
     <%= f.text_field :address %> </p>
 
 <p><fieldset><legend>Category</legend>
-  <%= radio_button_tag(:category_id, "it") %>
+  <%= radio_button_tag(:category_id, "1") %>
   <%= label_tag(:category_id, "Italian") %>
-  <%= radio_button_tag(:category_id, "as") %>
+  <%= radio_button_tag(:category_id, "2") %>
   <%= label_tag(:category_id, "Asian") %>
-  <%= radio_button_tag(:category_id, "me") %>
+  <%= radio_button_tag(:category_id, "3") %>
   <%= label_tag(:category_id, "Middle Eastern") %>
-  <%= radio_button_tag(:category_id, "cf") %>
+  <%= radio_button_tag(:category_id, "4") %>
   <%= label_tag(:category_id, "Comfort Food") %>
 </p></fieldset>
 
