--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -9,7 +9,7 @@
   <p> Summary: <%= @restaurant.summary %></p>
   <%= link_to('Website', "#") %>
   <p> Category: <%= @restaurant.category_id %></p>
-  <p> Neighbourhood: <%= @restaurant.neighbourhood %></p>
+  <p> Neighbourhood: <%= @restaurant.neighbourhood_id %></p>
   <p> Price range: <%= @restaurant.price_range %></p>
   <p> Opening hours: <%= @restaurant.opening_hours %></p>
   <p> Closing hours: <%= @restaurant.closing_hours %></p>
