--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
- *= require_self
  */
+
+ @import 'bootstrap';
+ @import 'categories.scss';
+ @import 'neighbourhoods.scss';
+ @import 'pages.scss';
+ @import 'reservations.scss';
+ @import 'restaurants.scss';
+ @import 'sessions.scss';
+ @import 'users.scss';
