Added authorizations to both main controllers and views

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -30,8 +30,7 @@
       </select>
     </div>
   </div>
-  <div
-    <input type="submit">
+  <div>
     <button type="submit">
       <h3>Search!</h3>
     </button>
