--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,26 @@
 
 <header>
 
-<%= link_to "Home", root_path %>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <h1><%= link_to "Open Table", root_path, { :class=>"ui-button-text button_text" }%></h1>
+      </div>
+      <ul class="nav navbar-nav">
+        <% if current_user %>
+          Signed in as <%= link_to current_user.email, user_path(current_user) %>
+          <%= link_to "Log out", session_path("current"), :method => :delete %>
+        <% else%>
+          <%= link_to "Sign Up", new_user_url %>
+          <%= link_to "Sign In", new_session_url %>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 
-<% if current_user %>
-  Signed in as <%= link_to current_user.email, user_path(current_user) %>
-  <%= link_to "Log out", session_path("current"), :method => :delete %>
-<% else%>
-  <%= link_to "Sign Up", new_user_url %>
-  <%= link_to "Sign In", new_session_url %>
-<% end %>
+
+
+
 
 <% if flash[:notice] %>
   <p class="notice"><%= flash[:notice] %></p>
