--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,35 +1,31 @@
-<h1>HOMEPAGE</h1>
 
-<section class="top_spots">
-  <h2>Top Spots</h2>
-
+<h2>Top Spots</h2>
+<section class="top_spots row">
   <% @top_spots.each do |spot| %>
-    <article class="top_spot">
+    <article class="top_spot col">
       <%= link_to image_tag(spot.picture_url), restaurant_path(spot) %>
       <%= spot.name %>
     </article>
   <% end %>
 </section>
 
-<section class="categories">
-  <h2>Categories</h2>
-
+<h2>Categories</h2>
+<section class="categories row d-flex">
   <% @categories.each do |category| %>
   <% if category.restaurants %>
-    <article class="top_spot">
-      <%= link_to image_tag(category.restaurants.first.picture_url), restaurants_path %>
+    <article class="top_spot col" >
+      <%= link_to image_tag(category.restaurants.first.picture_url, {:class=>"rounded img-fluid"}), restaurants_path%>
       <%= category.name %>
     </article>
   <% end %>
   <% end %>
 </section>
 
-<section class="neighbourhoods">
-  <h2>Neighbourhoods</h2>
-
+<h2>Neighbourhoods</h2>
+<section class="neighbourhoods row">
   <% @neighbourhoods.each do |neighbourhood| %>
   <% if neighbourhood.restaurants %>
-    <article class="top_spot">
+    <article class="top_spot col">
       <%= link_to image_tag(neighbourhood.restaurants.first.picture_url), restaurants_path %>
       <%= neighbourhood.name %>
     </article>
@@ -37,7 +33,7 @@
   <% end %>
 </section>
 
-<% if current_user %>
 <h2>Your Reservations:</h2>
+<% if current_user %>
   <%= render "shared/user_reservations", reservations: @reservations %>
 <% end %>
