--- a/app/views/reservations/show.html.erb
+++ b/app/views/reservations/show.html.erb
@@ -2,7 +2,7 @@
 <p><%= @reservation.date_time %></p>
 <p><%= @reservation.party_size %></p>
 <p><%= @reservation.user.name %></p>
-<p><%= @reservation.restaurant.name %></p>
+<p><%= link_to @reservation.restaurant.name, restaurant_path(@reservation.restaurant) %></p>
 
   <%= link_to("Delete", restaurant_reservation_path(@restaurant, @reservation), method: :delete, data: {confirm: "Are you sure you want to delete this reservation?"})  %>
   <%= link_to("Edit", edit_restaurant_reservation_path(@restaurant, @reservation)) %>
