--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,3 +15,8 @@
   <%= f.submit "Edit Details" %>
 
 <% end %>
+<br />
+<br />
+<br />
+<br />
+<%= link_to("Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to your restaurant? All of its reservations will also be deleted!"}) %>
