--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,28 @@
 <h1>USER PAGE</h1>
 
-<p>Hello <%= @user.name %></p>
+<p>Hello <%= @user.name %> | <%= link_to "Log out", session_path("current"), :method => :delete %> </p>
 <p>E-mail: <%= @user.email %></p>
 
 <%= link_to "Edit account details", edit_user_path(@user)%>
 
-<h3>Your Reservations:</h3>
+<br />
 
-<%= render "shared/user_reservations", reservations: @reservations %>
+<% if @user.reservations.length > 0 %>
+  <h3>Your Reservations:</h3>
+  <%= render "shared/user_reservations", reservations: @reservations %>
+<% end %>
 
-<%= link_to("Delete Account", user_path(@user), method: :delete, data: {confirm: "Are you sure you want to your account? All of your reservations will also be deleted!"}) %>
+<% if @user.restaurants.length > 0 %>
+  <h3>Your Restaurants:</h3>
 
-<h3>Your Restaurants:</h3>
+  <ul>
+    <% @restaurants.each do |restaurant| %>
+      <li><%= restaurant.name %> | <%= link_to "More Info", edit_restaurant_path(restaurant) %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-<%= link_to "Add new restaurant", new_restaurant_path(@user)%>
+<br />
+<br />
+<br />
+<%= link_to "Add New Restaurant", new_restaurant_path(@user)%>
