--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,11 @@
       </div>
       <ul class="nav navbar-nav">
         <% if current_user %>
-          Signed in as <%= link_to current_user.email, user_path(current_user) %>
-          <%= link_to "Log out", session_path("current"), :method => :delete %>
+          <%= link_to current_user.email, user_path(current_user,  {:class=>"d-inline"}) %>
+          <%= link_to "Log out", session_path("current"), {:method => :delete, :class=>"d-inline"}%>
         <% else%>
-          <%= link_to "Sign Up", new_user_url %>
-          <%= link_to "Sign In", new_session_url %>
+          <%= link_to "Sign Up", new_user_url, {:class=>"d-inline"}  %>
+          <%= link_to "Sign In", new_session_url, {:class=>"d-inline"} %>
         <% end %>
       </ul>
     </div>
@@ -37,7 +37,7 @@
 
 </header>
 
-<main><%= yield %></main>
+<main class="mx-auto" style="width: 1080px;"><%= yield %></main>
 
 <footer></footer>
 
