--- a/app/assets/stylesheets/restaurants.scss
+++ b/app/assets/stylesheets/restaurants.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the Restaurants controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+h3 {
+  font-size: 1.25rem;
+}
+
+.dd_category, .dd_neighbourhood, .dd_price_range {
+  padding: 5px;
+}
+
+.btn-primary {
+  margin-top: 30px;
+}
+
+.text-center {
+  font-size: 4rem;
+}
+
+h3 > a:hover {
+  background-color: yellow;
+  font-size: 2rem;
+}
+h3 > a:active {
+  background: red;
+}
+
+// h3 > img:hover {
+//   width: 150%;
+//   height:100%;
+// }
